Changelog:  - BinarySearch example with tests implemented.  - Test data for BinarySearch example added.  - Small fixes to TestDataManager and common.properties.  - Book stdlib added to pom.xml. Now we can use mvn command to run the code.